--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/design-system": "^1.39.0",
+    "@powerhousedao/design-system": "1.39.3-dev.0",
     "document-model": "^2.27.1",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
@@ -59,17 +59,19 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@powerhousedao/analytics-engine-core": "^0.3.2",
+    "@powerhousedao/builder-tools": "0.9.6-dev.0",
     "@powerhousedao/codegen": "^0.48.0",
-    "@powerhousedao/ph-cli": "^0.40.7-dev.3",
-    "@powerhousedao/reactor-api": "^1.29.4",
-    "@powerhousedao/reactor-browser": "1.22.5-dev.1",
-    "@powerhousedao/reactor-local": "^1.27.4",
+    "@powerhousedao/common": "1.10.8-dev.0",
+    "@powerhousedao/ph-cli": "^0.40.8-dev.0",
+    "@powerhousedao/reactor-api": "^1.29.7-dev.0",
+    "@powerhousedao/reactor-browser": "1.22.7-dev.0",
+    "@powerhousedao/reactor-local": "1.27.7-dev.0",
     "@powerhousedao/scalars": "^1.32.0",
     "@tailwindcss/cli": "^4.0.15",
     "@types/node": "^22.13.11",
     "@types/react": "^18.3.19",
     "@vitejs/plugin-react": "^4.3.4",
-    "document-drive": "^1.28.4",
+    "document-drive": "1.29.0-dev.3",
     "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
