--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "script:apply-changes": "bun run ./scripts/apply-changes.ts",
     "service": "ph-cli service",
     "service-startup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-startup.sh",
-    "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
+    "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh",
+    "import-accounts": "bun run ./commands/index.ts import-accounts"
   },
   "dependencies": {
     "@apollo/client": "^3.13.5",
@@ -58,6 +59,7 @@
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "graphql-ts-client": "^10.4.0",
+    "node-fetch": "^3.3.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
