--- a/package.json
+++ b/package.json
@@ -60,19 +60,19 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@powerhousedao/analytics-engine-core": "^0.3.2",
-    "@powerhousedao/builder-tools": "0.9.8-dev.0",
-    "@powerhousedao/codegen": "^0.49.1-dev.1",
-    "@powerhousedao/common": "1.10.9-dev.0",
-    "@powerhousedao/ph-cli": "0.40.10-dev.0",
-    "@powerhousedao/reactor-api": "^1.29.9-dev.0",
-    "@powerhousedao/reactor-browser": "1.22.9-dev.0",
-    "@powerhousedao/reactor-local": "1.27.9-dev.0",
+    "@powerhousedao/builder-tools": "0.9.10-dev.0",
+    "@powerhousedao/codegen": "^0.49.2-dev.1",
+    "@powerhousedao/common": "^1.10.11-dev.0",
+    "@powerhousedao/ph-cli": "^0.40.12-dev.0",
+    "@powerhousedao/reactor-api": "^1.29.10-dev.1",
+    "@powerhousedao/reactor-browser": "^1.22.11-dev.0",
+    "@powerhousedao/reactor-local": "^1.27.11-dev.0",
     "@powerhousedao/scalars": "^1.32.0",
     "@tailwindcss/cli": "^4.0.15",
     "@types/node": "^22.13.11",
     "@types/react": "^18.3.19",
     "@vitejs/plugin-react": "^4.3.4",
-    "document-drive": "1.29.2-dev.0",
+    "document-drive": "1.29.4-dev.0",
     "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
