--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "generate": "ph-cli generate",
     "connect": "ph-cli connect",
     "reactor": "ph-cli reactor",
-    "script:apply-changes": "bun run ./scripts/apply-changes.ts",
+    "create-finances-drive": "bun run ./scripts/apply-changes.ts",
     "service": "ph-cli service",
     "service-startup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-startup.sh",
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh",
