--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/design-system": "1.39.3-dev.0",
+    "@powerhousedao/design-system": "dev",
+    "@sky-ph/atlas": "dev",
     "document-model": "^2.27.1",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
@@ -60,19 +61,19 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@powerhousedao/analytics-engine-core": "^0.3.2",
-    "@powerhousedao/builder-tools": "0.9.10-dev.0",
-    "@powerhousedao/codegen": "^0.49.2-dev.1",
-    "@powerhousedao/common": "^1.10.11-dev.0",
-    "@powerhousedao/ph-cli": "^0.40.12-dev.0",
-    "@powerhousedao/reactor-api": "^1.29.10-dev.1",
-    "@powerhousedao/reactor-browser": "^1.22.11-dev.0",
-    "@powerhousedao/reactor-local": "^1.27.11-dev.0",
+    "@powerhousedao/builder-tools": "dev",
+    "@powerhousedao/codegen": "dev",
+    "@powerhousedao/common": "dev",
+    "@powerhousedao/ph-cli": "dev",
+    "@powerhousedao/reactor-api": "dev",
+    "@powerhousedao/reactor-browser": "dev",
+    "@powerhousedao/reactor-local": "dev",
     "@powerhousedao/scalars": "^1.32.0",
     "@tailwindcss/cli": "^4.0.15",
     "@types/node": "^22.13.11",
     "@types/react": "^18.3.19",
     "@vitejs/plugin-react": "^4.3.4",
-    "document-drive": "1.29.4-dev.0",
+    "document-drive": "dev",
     "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
