--- a/powerhouse.config.json
+++ b/powerhouse.config.json
@@ -7,9 +7,5 @@
   "reactor": {
     "port": 4001
   },
-  "packages": [
-    {
-      "packageName": "@sky-ph/atlas"
-    }
-  ]
+  "packages": []
 }
