--- a/package.json
+++ b/package.json
@@ -52,29 +52,30 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/builder-tools": "staging",
-    "@powerhousedao/common": "staging",
-    "@powerhousedao/design-system": "staging",
-    "document-model": "staging",
+    "@powerhousedao/builder-tools": "0.9.34-staging.0",
+    "@powerhousedao/common": "1.10.39-staging.0",
+    "@powerhousedao/design-system": "1.39.22-staging.0",
+    "document-model": "2.28.1-staging.4",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@powerhousedao/analytics-engine-core": "^0.3.2",
-    "@powerhousedao/codegen": "staging",
-    "@powerhousedao/ph-cli": "staging",
-    "@powerhousedao/reactor-api": "staging",
-    "@powerhousedao/reactor-browser": "staging",
-    "@powerhousedao/reactor-local": "staging",
-    "@powerhousedao/scalars": "staging",
+    "@powerhousedao/codegen": "0.49.2-staging.8",
+    "@powerhousedao/ph-cli": "0.40.55-staging.0",
+    "@powerhousedao/reactor-api": "1.29.22-staging.0",
+    "@powerhousedao/reactor-browser": "1.22.29-staging.2",
+    "@powerhousedao/reactor-local": "1.27.39-staging.0",
+    "@powerhousedao/scalars": "1.33.1-staging.4",
     "@tailwindcss/cli": "^4.1.4",
     "@types/node": "^22.14.1",
     "@types/react": "^18.3.20",
     "@vitejs/plugin-react": "^4.4.1",
-    "document-drive": "staging",
+    "document-drive": "1.29.13-staging.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
