--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@liberuum-org/finances",
   "description": "Powerhouse finances drive explorer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "AGPL-3.0-only",
   "type": "module",
   "files": [
@@ -58,10 +58,10 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@commander-js/extra-typings": "^13.1.0",
-    "@powerhousedao/builder-tools": "0.9.34-staging.0",
-    "@powerhousedao/common": "1.10.39-staging.0",
-    "@powerhousedao/design-system": "1.39.22-staging.0",
-    "document-model": "2.28.1-staging.4",
+    "@powerhousedao/builder-tools": "^0.10.0",
+    "@powerhousedao/common": "^1.11.0",
+    "@powerhousedao/design-system": "^1.40.0",
+    "document-model": "^3.0.0",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -71,17 +71,17 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@powerhousedao/analytics-engine-core": "^0.4.0",
-    "@powerhousedao/codegen": "0.49.2-staging.8",
-    "@powerhousedao/ph-cli": "0.40.55-staging.0",
-    "@powerhousedao/reactor-api": "1.29.22-staging.0",
-    "@powerhousedao/reactor-browser": "1.22.29-staging.2",
-    "@powerhousedao/reactor-local": "1.27.39-staging.0",
-    "@powerhousedao/scalars": "1.33.1-staging.4",
+    "@powerhousedao/codegen": "^0.50.0",
+    "@powerhousedao/ph-cli": "^0.41.0",
+    "@powerhousedao/reactor-api": "^1.30.0",
+    "@powerhousedao/reactor-browser": "^1.23.0",
+    "@powerhousedao/reactor-local": "^1.28.0",
+    "@powerhousedao/scalars": "^2.0.0",
     "@tailwindcss/cli": "^4.1.4",
     "@types/node": "^22.14.1",
     "@types/react": "^18.3.20",
     "@vitejs/plugin-react": "^4.4.1",
-    "document-drive": "1.29.13-staging.0",
+    "document-drive": "^1.30.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
