Fix Connect UI to display Accounts and AccountTransactions document models
- Fixed DriveContextProvider import path in finances-drive editor
- Updated powerhouse.manifest.json with correct document models and editors:
  - Added powerhouse/accounts and powerhouse/account-transactions document models
  - Added accounts-editor and account-transactions-editor with correct IDs
- Updated dependencies in pnpm-lock.yaml for compatibility
- Resolved package compatibility issues and import errors
- Connect now successfully loads with accessible document model editors

--- a/powerhouse.manifest.json
+++ b/powerhouse.manifest.json
@@ -6,8 +6,32 @@
         "name": "Powerhouse",
         "url": "https://powerhousedao.com"
     },
-    "documentModels": [],
-    "editors": [],
+    "documentModels": [
+        {
+            "id": "powerhouse/accounts",
+            "name": "Accounts"
+        },
+        {
+            "id": "powerhouse/account-transactions",
+            "name": "Account Transactions"
+        }
+    ],
+    "editors": [
+        {
+            "id": "accounts-editor",
+            "name": "Accounts",
+            "documentTypes": [
+                "powerhouse/accounts"
+            ]
+        },
+        {
+            "id": "account-transactions-editor",
+            "name": "Account Transactions",
+            "documentTypes": [
+                "powerhouse/account-transactions"
+            ]
+        }
+    ],
     "apps": [
         {
             "id": "finances-drive",
