--- a/package.json
+++ b/package.json
@@ -59,12 +59,12 @@
     "service-unstartup": "bash ./node_modules/@powerhousedao/ph-cli/dist/scripts/service-unstartup.sh"
   },
   "dependencies": {
-    "@powerhousedao/builder-tools": "^5.0.1-staging.6",
-    "@powerhousedao/common": "^5.0.1-staging.6",
-    "@powerhousedao/design-system": "^5.0.1-staging.6",
+    "@powerhousedao/builder-tools": "latest",
+    "@powerhousedao/common": "latest",
+    "@powerhousedao/design-system": "latest",
     "@powerhousedao/document-engineering": "^1.39.0",
-    "@powerhousedao/vetra": "^5.0.1-staging.6",
-    "document-model": "^5.0.1-staging.6",
+    "@powerhousedao/vetra": "latest",
+    "document-model": "latest",
     "error": "^10.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -77,21 +77,21 @@
     "@electric-sql/pglite": "^0.2.17",
     "@eslint/js": "^9.37.0",
     "@powerhousedao/analytics-engine-core": "^0.5.0",
-    "@powerhousedao/codegen": "^5.0.1-staging.6",
-    "@powerhousedao/config": "^5.0.1-staging.6",
-    "@powerhousedao/connect": "^5.0.1-staging.6",
-    "@powerhousedao/ph-cli": "^5.0.1-staging.6",
-    "@powerhousedao/reactor-api": "^5.0.1-staging.6",
-    "@powerhousedao/reactor-browser": "^5.0.1-staging.6",
-    "@powerhousedao/reactor-local": "^5.0.1-staging.6",
+    "@powerhousedao/codegen": "latest",
+    "@powerhousedao/config": "latest",
+    "@powerhousedao/connect": "latest",
+    "@powerhousedao/ph-cli": "latest",
+    "@powerhousedao/reactor-api": "latest",
+    "@powerhousedao/reactor-browser": "latest",
+    "@powerhousedao/reactor-local": "latest",
     "@powerhousedao/scalars": "2.0.1",
-    "@powerhousedao/switchboard": "^5.0.1-staging.6",
+    "@powerhousedao/switchboard": "latest",
     "@tailwindcss/cli": "^4.1.14",
     "@types/node": "^22.13.11",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
-    "document-drive": "^5.0.1-staging.6",
+    "document-drive": "latest",
     "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
